deployment/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: covid-summary
  namespace: lmwn-assesment
spec:
  selector:
    app: covid-summary-api
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
