deployment/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: covid-summary
  namespace: lmwn-assesment
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lmwn-covid-summary.kuranasaki.work 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: covid-summary
            port:
              number: 8080
